--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-hey!
-This project is about a game, it has been developed using pygame module in python.
+This is a python based game project that is developed using pygames module.
